# wholesale-company-app

./: .env.example  .gitignore  compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_tables.sql  002_functions.sql  003_test_data.sql  functions.sql
backend/models/: user.rs
backend/src/: config.rs  error.rs  lib.rs  main.rs  mod.rs  pagination.rs  state.rs
backend/src/adapters/db/: category_repo.rs  inventory_repo.rs  mod.rs  order_repo.rs  role_repo.rs  user_repo.rs  warehouse_repo.rs
backend/src/adapters/http/: auth.rs  categories.rs  health.rs  inventory.rs  mod.rs  orders.rs  roles.rs  users.rs  warehouses.rs
backend/src/adapters/http/middleware/: auth.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/domain/: category.rs  inventory.rs  mod.rs  order.rs  role.rs  user.rs  warehouse.rs
backend/src/handlers/: auth.rs  categories.rs  health.rs  inventory.rs  mod.rs  orders.rs  roles.rs  users.rs  warehouses.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  categories.rs  inventory.rs  mod.rs  orders.rs  roles.rs  users.rs  warehouses.rs
backend/src/ports/: category_repo.rs  inventory_repo.rs  mod.rs  order_repo.rs  role_repo.rs  user_repo.rs  warehouse_repo.rs
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/api/: auth.ts  categories.ts  client.ts  inventory.ts  orders.ts  roles.ts  users.ts  warehouses.ts
frontend/src/components/: Footer.tsx  Navbar.tsx  ProductCard.tsx  ProtectedRoute.tsx
(+49 files in other folders)
